Thu Feb 12 11:23:19 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/manconv_main.c (main): Correct error message if the given
	  filename cannot be opened.

Wed Feb  4 13:53:47 CET 2009  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project (trivial).

Sun Feb  1 16:40:16 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Directory layout): Mention gnulib.

Sun Feb  1 16:36:01 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* lib/linelength.c (get_line_length): Use line length from standard
	  input, but only if standard output is not a terminal; this allows
	  commands such as 'MAN_KEEP_STDERR=1 man foo >/dev/null' to report
	  errors based on the current line length.

Sat Jan 31 12:20:42 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Update.

Sat Jan 31 12:14:10 GMT 2009  Arif E. Nugroho  <arif_endro@yahoo.com>

	* po/id.po: Update from Translation Project.

Tue Jan 27 09:54:25 GMT 2009  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project (trivial).

Tue Jan 27 09:52:18 GMT 2009  Erwin Poeze  <erwin.poeze@gmail.com>

	* po/nl.po: Update from Translation Project.
	* man/THANKS: Update.

Mon Jan 26 13:40:30 GMT 2009  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Mon Jan 26 13:38:11 GMT 2009  Robert Luberda  <robert@debian.org>

	* po/pl.po, man/po4a/po/pl.po: Update from Translation Project.

Sun Jan 18 23:27:11 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* lib/linelength.c (get_line_length): Line length is a property of
	  output, not input, so only check whether standard output is a
	  terminal, not also standard input (Debian bug #512233).

Thu Jan 15 16:04:01 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* po/Makevars (XGETTEXT_OPTIONS): Add --flag=debug:1:c-format
	  --flag=debug_error:1:c-format.

Thu Jan 15 00:00:05 GMT 2009  Colin Watson  <cjwatson@debian.org>
